--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.2.7",
     "@vercel/postgres": "^0.10.0",
     "autoprefixer": "10.4.15",
+    "bcrypt": "^5.1.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "next": "13.5.1",
@@ -26,6 +27,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.9"
+    "@tailwindcss/forms": "^0.5.9",
+    "@types/bcrypt": "^5.0.2"
   }
 }
