--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.4.10",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "use-debounce": "^10.0.3"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
