--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "eslint-config-next": "13.5.1",
-    "next": "13.5.1",
+    "next": "^14.2.11",
     "next-auth": "^4.24.7",
+    "node": "^22.8.0",
     "postcss": "8.4.30",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.10",
     "typescript": "5.2.2",
     "use-debounce": "^10.0.3"
